--- a/setki/gllacy-index copy.css
+++ b/setki/gllacy-index copy.css
@@ -1,16 +1,22 @@
 html,
 body {
-	min-width: 900px; 
+	min-width: 1250px; 
 	min-height: 2433px;
 	margin: 0;
 	padding: 0;
 }
 
 body {
-	background: 
-	/* тут, кажется, фон верствается вместе со слайдером ??? */
-	background-image: url("Фон.png");
-	background-size: 900px auto;
+	background-size: 1200px auto;
+	background-image: url(../img/fon1.png); 
+	width: 1250px;
+    height: 2449px;
+    margin: auto;
+    link: "white";
+}
+
+a {
+	color: white;
 }
 
 .clearfix::after {
@@ -20,113 +26,236 @@ body {
 	clear: both;
 }
 
-.container {
-	width: 880px; /* как это вообще выбирается? может он у меня быть на всю длину=900? там он большой */
-	margin: 0 auto;
-	padding: 0 10px;
-} 
-
 .header-container {
-	min-height: 120px;
-	margin-bottom: 60px;
+	height: 125px;
+	width: 1200px;
+	margin-bottom: 50px;
+	margin: 0 auto;
 }
+
+.container {
+	width: 1200px;
+	height: 125px;
+	padding: 8px 8px;
+	margin: 10px auto;
+}
+
 .main-nav-block {
 	min-height: 120px;
-	width: 550px;
+	width: 530px;
 	float: left;
+	margin-right: 357px;
 
 }
 
-/* что делать с блоками внутри? */
-.main-nav-block .logo-main {
-	width: 170px;
-	float: left;
+.logo-main {
+    width: 155px;
+    height: 64px;
+    float: left;
+    margin-right: px;
+    margin-left: 25px;
+    margin-top: 8px;
 }
 
-.main-nav-block .main-nav {
-	width: 365px;
+.main-nav {
+	width: 350px;
 	float: right;
+	margin-top: 12px;
+	
 }
-/* end of comment */
- 
+
+li {
+	list-style-type: none;
+}
+
+.main-nav-list > li {
+	font-size: 16px;
+  font-family: "Roboto";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.125;
+  text-align: left;
+}
+
+.main-nav-item {
+	float: left
+  
+}
+
+.main-nav-item:first-child {
+	width: 70px;
+	margin-right: 0px;
+}
+
+.main-nav-item:last-child {
+	float: right;
+	width: 100px;
+	margin-left: 0px;
+}
+
 .user-block {
 	min-height: 120px;
-	width: 275px;
+	
+	width: 265px;
 	float: right;
+	margin-top: 21px;
+	margin-right: 26px;
 
 }
 
-/* что делать со слайдером - я не знаю, в PS весь слайдер лежит в папке Фон. */
+.search {
+	width: 33px;
+    height: 33px;
+    float: left;
+    margin-right: 10px;
+    background-image: url(../img/search.png);
+}
+
+.user-login {
+	width: 93px;
+    height: 32px;
+    float: left;
+    margin-right: 9px;
+    background-image: url(../img/enter.png);
+}
+
+.basket {
+	width: 117px;
+    height: 32px;
+    float: right;
+    background-image: url(../img/basket.png);
+}
+
+.phone-numbers {
+	margin-top: 20px;
+	left: 727.938px;
+    top: 88.249px;
+    float: right;
+    font-size: 14px;
+  font-family: "Roboto";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+}
+
+.line-one {
+  line-height: 1.143;
+  text-align: right;
+  left: 1020.938px;
+  top: 88.249px;
+  float: right;
+}
+
+.line-two {
+  line-height: 1.091;
+  text-align: right;
+  left: 1006.937px;
+  top: 92.499px;
+  float: right;
+}
+
+
+
+
+
+
+
+
+.main {
+	border-style: solid;
+	border-width: 5px;
+	border-color: red;
+}
+
+.slider-frontpage {
+	border: 2px solid green;
+	margin-bottom: 10px;
+}
 
 .banners {
-	width: 880px;
-	height: 240px;
-	margin-bottom: 25px;
+	border: 2px solid green;
+	margin-bottom: 10px;
 }
 
 .banner {
 	float: left;
-	width: 425px;
+	width: 400px;
 	margin-right: 20px;
 }
 
-.hit {
-	width: 880px;
-	margin-bottom: 25px;
+.banner:last-child {
+	margin-right: 0px;
 }
 
 .hits {
-	width: 215px;
-	height: 290px;
+	border: 2px solid green;
+	margin-bottom: 10px;
+	width: 880px;
+	height: 150px;
+}
+
+.hit {
 	float: left;
+	width: 190px;
+	margin-right: 5px;
+}
+
+.hit:last-child {
+	margin-right: 0px;
 }
 
 .about-frontpage {
-	height: 380px;
-	margin: 0 auto;
-	margin-bottom: 25px;
+	border: 2px solid green;
+	margin-bottom: 10px;
 }
 
 .blog-and-mailing {
-	height: 230px;
-	margin: 25px;
+	border: 2px solid green;
+	margin-bottom: 10px;
 }
 
-.blog-and-mailing-item {
-	width: 425px;
+.blog {
 	float: left;
+	width: 400px;
+	border: 1px solid white;
+}
+
+
+.mailing-list {
+	float: right;
+	width: 400px;
+	border: 1px solid white;
 }
 
 .map-front {
-	height: 140px;
-	padding: no;
-}
-
-.address-top-map {
-	float: right;
-	height: 308px;
-	width: 304px;
+	border: 2px solid green;
 }
 
 .main-footer {
-	margin-top: 5px;
-	padding: 15px;
+	margin-top: 10px;
+	background-color: rgb(200, 134, 40);
 }
 
 .social-networks {
-	width: 200px;
-	height: 65px;
+	border: 1px solid white;
 	float: left;
+	width: 200px;
+	margin-right: 20px;
 }
 
 .links-footer {
-	width: 265px;
-	height: 65px;
-	float: left; 
+	border: 1px solid white;
+	float: left;
+	width: 200px;
+	margin-right: 50px;
 }
 
 .developers {
-	height: 65px;
-	width: 205px;
+	border: 1px solid white;
 	float: right;
+	width: 200px;
 }
+
+
+
+
+
