--- a/setki/gllacy-index copy.css
+++ b/setki/gllacy-index copy.css
@@ -1,66 +1,74 @@
+/*--- reset ---*/
+
 html,
 body {
-	min-width: 1250px; 
-	min-height: 2433px;
+	
 	margin: 0;
 	padding: 0;
 }
 
 body {
-	background-size: 1200px auto;
-	background-image: url(../img/fon1.png); 
-	width: 1250px;
-    height: 2449px;
-    margin: auto;
-    link: "white";
+	background-color: #849d8f;
 }
-
+	     
+	     
 a {
 	color: white;
 }
 
+ul {
+	padding: 0;
+}
+
+@font-face {
+  font-family: 'roboto-regular';
+  src: url('../fonts/roboto.woff2') format('woff2'), / Super Modern Browsers /
+       url('roboto.woff') format('woff'); / Pretty Modern Browsers /
+}
+
+
+.logo-link {
+	float: left;
+}
+
+/*--USEFUL CLASSES --*/
 .clearfix::after {
 	content: "";
-
 	display: table;
 	clear: both;
 }
 
-.header-container {
-	height: 125px;
+.container {
 	width: 1200px;
-	margin-bottom: 50px;
 	margin: 0 auto;
 }
 
-.container {
-	width: 1200px;
-	height: 125px;
-	padding: 8px 8px;
-	margin: 10px auto;
+/*--------------------*/
+
+.header-container {
+	margin-bottom: 50px;
+	overflow: hidden;
 }
 
-.main-nav-block {
-	min-height: 120px;
-	width: 530px;
-	float: left;
-	margin-right: 357px;
 
+
+.main-nav-block {
+	max-width: 800px;
+	float: left;
 }
 
 .logo-main {
     width: 155px;
     height: 64px;
-    float: left;
-    margin-right: px;
     margin-left: 25px;
+    margin-right: 10px;
     margin-top: 8px;
+    float: left;
 }
 
 .main-nav {
-	width: 350px;
-	float: right;
 	margin-top: 12px;
+	float: left;
 	
 }
 
@@ -69,7 +77,7 @@ li {
 }
 
 .main-nav-list > li {
-	font-size: 16px;
+  font-size: 16px;
   font-family: "Roboto";
   color: rgb(255, 255, 255);
   font-weight: bold;
@@ -78,52 +86,100 @@ li {
 }
 
 .main-nav-item {
-	float: left
-  
+	float: left;
 }
 
-.main-nav-item:first-child {
-	width: 70px;
-	margin-right: 0px;
+.main-nav-item a{
+	padding: 9px 12px;
+	display: inline-block;	
 }
 
-.main-nav-item:last-child {
-	float: right;
-	width: 100px;
-	margin-left: 0px;
+.main-nav-item a:hover {
+	display: inline-block;
+	background-color: #c4cdc6;
+	border-radius: 18px;
+	color: #565655;
+}
+
+.pop-down {
+	position: absolute;
+	display: none;
+}
+
+.pop-down:hover {
+	display: block;
+	background-color: #c4cdc6;
+	border-radius: 3px;
+	color: #565655;
+	padding: 12px;
+}
+
+.new {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+hr {
+	{
+    border: none; 
+    background-color: #b5c3bc; 
+    height: 2px;
+}
+
+.pop-down a:hover {
+	background-color: #fbded7;
+}
+
+.pop-down a:active {
+	background-color: #f6b5a5;
+}
+
+.pop-down a:visited {
+	background-color: #d07058;
+	color: white;
 }
 
 .user-block {
-	min-height: 120px;
-	
-	width: 265px;
 	float: right;
-	margin-top: 21px;
-	margin-right: 26px;
-
+	width: 275px;
+	background-color: red;
 }
 
 .search {
+	display: block;
 	width: 33px;
     height: 33px;
+    background-color: white;
+	border-radius: 50%;
     float: left;
     margin-right: 10px;
-    background-image: url(../img/search.png);
+}
+
+.icon-search {
+	background-image: url(../img/sprite1.png);
+	background-repeat: no-repeat;
+	background-position: -4px -22px;
+	display: inline-block;
+
 }
 
 .user-login {
 	width: 93px;
     height: 32px;
+    background-color: #9db1a5;
+	border-radius:
     float: left;
     margin-right: 9px;
-    background-image: url(../img/enter.png);
+    
 }
 
 .basket {
 	width: 117px;
     height: 32px;
+    background-color: #9db1a5;
+	border-radius:
     float: right;
-    background-image: url(../img/basket.png);
+    
 }
 
 .phone-numbers {
